feat(android): browser sandbox console log viewer + code review fixes
BrowserActivity sandbox browser enhancements:
- Add LogBottomSheet for console log viewing and sending to chat sessions
- Capture WebView console output via onConsoleMessage + JS error listeners
- Session picker dialog with radio-style selection and running indicator
- Send logs to sessions with Markdown code block wrapping + truncation
- Navigate to target session after successful send (hide, not close)

Browser feature improvements:
- Home button (back to main app) + URL bar + log button + overflow menu
- Forward, desktop mode toggle, find-in-page via overflow menu
- PopupMenu with reflection for icons (graceful fallback on API 34+)

Code review fixes:
- SSLHelper.setupTrustAll() restricted to localhost/127.0.0.1 only
- BrowserSessionCredentials uses getAndClear() to minimize exposure
- LogBottomSheet gets credentials from BrowserActivity memory, not prefs
- Replace deprecated getColor() with ContextCompat.getColor()
- Clear selectedSeqs on filter change to avoid stale selections
- SimpleDateFormat extracted to static final fields for reuse
- setEntries() diff checks both first and last seq for buffer eviction
- InputStream leak fix in shouldInterceptRequest error preview
- shutdown() instead of shutdownNow() for network executor
- ArrayDeque for O(1) head removal in BrowserLogBuffer
- Layout.BREAK_STRATEGY_SIMPLE constant instead of magic number
- Auto-scroll to bottom when new log entries arrive
- MAX_SEND_LENGTH=10000 truncation for log sends
- Confirm button loading state in session picker
- Full-screen bottom sheet with expandedOffset=0